[package]
name = "scoped-stream-sink"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/Dheatly23/scoped-stream-sink"
description = "Easy way to make streams and sinks"
keywords = ["async", "stream", "sink"]
authors = ["Dheatly23 <71598333+Dheatly23@users.noreply.github.com>"]
license = "Apache-2.0"

[dependencies]
futures-core = "0.3"
futures-sink = "0.3"
pin-project-lite = "0.2"

[dev-dependencies]
anyhow = "1"

[dev-dependencies.futures-util]
version = "0.3"
features = [
  "sink",
]

[dev-dependencies.tokio]
version = "1"
features = [
  "test-util",
  "macros",
  "rt-multi-thread",
]
